add: lesson day 10

--- a/projects/project_02/polo.html
+++ b/projects/project_02/polo.html
@@ -34,7 +34,7 @@
                 <p class="ab">XL</p>
                 <p class="ab">XXL</p>
             </div>
-            <button  class="ADD">ADD TO BAG <a href="./addtobag.html"></a> </button>
+           <a href="./addtobag.html">  <button  class="ADD">ADD TO BAG </button></a>
     </main>
     </div>
 
