add: lesson day 12

--- a/projects/proj 3/proj3.html
+++ b/projects/proj 3/proj3.html
@@ -31,12 +31,24 @@
                 <span class="oplt">
                     Endless your <br>
                     Creativity!</span>
-                <p>I will create something that will <br>
+                <p>I will create something that will
                     exceeding your expectation</p>
-             <a href=""><button>Go To Portofolio</button></a>  
+                <a href=""><button>Go To Portofolio</button></a>
             </div>
-            <img src="./Artboard2-02 1.png" alt="">
+            <img class="img" src="./Artboard2-02 1.png" alt="">
         </div>
+        <div class="optic">
+            <img src="./Artboard2-02 1.png" alt="">
+                <p class="why">Your Satisfaction <br>
+                    Our Priority</p>
+                <p class="problem">I will create something that will
+                    exceeding your expectation</p>
+                <a class="xlass" href=""> <button> Contact me! </button> </a>
+            </div>
+        </div>
+        <p class="colour">Our Happy Clients</p>
+        <p class="secondbreakfast">See their happy stories after working with us</p>
+        <button class="button"> Contact me!</button>
     </main>
 </body>
 
