add: lesson day 14

--- a/projects/proj 3/proj3.html
+++ b/projects/proj 3/proj3.html
@@ -39,16 +39,30 @@
         </div>
         <div class="optic">
             <img src="./Artboard2-02 1.png" alt="">
+            <div class="text">
                 <p class="why">Your Satisfaction <br>
                     Our Priority</p>
-                <p class="problem">I will create something that will
-                    exceeding your expectation</p>
-                <a class="xlass" href=""> <button> Contact me! </button> </a>
+                <p class="problem">What do you waiting for? let the result
+                    approve your doubt</p>
+                <a class="divlass" href=""><button> Contact me! </button> </a>
             </div>
+
+        </div>
         </div>
         <p class="colour">Our Happy Clients</p>
         <p class="secondbreakfast">See their happy stories after working with us</p>
         <button class="button"> Contact me!</button>
+        <div class="section3">
+            <div class="CEO1">
+                <img src="./ceo-1.png" alt="">
+            </div>
+            <div class="CEO2">
+                <img src="./ceo-2.png" alt="">
+            </div>
+            <div class="CEO3">
+                <img src="./ceo-3.png" alt="">
+            </div>
+        </div>
     </main>
 </body>
 
