add: lesson day 15

--- a/projects/proj 3/proj3.html
+++ b/projects/proj 3/proj3.html
@@ -54,16 +54,38 @@
         <button class="button"> Contact me!</button>
         <div class="section3">
             <div class="CEO1">
-                <img src="./ceo-1.png" alt="">
+                <img class="lore" src="./ceo-1.png" alt="">
+                <p class="class one">Surename One</p>
+                <p class="class four">Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum ea earum distinctio
+                    debitis ut recusandae. Voluptatem vero culpa possimus?</p>
+                <p class="glass eleven">CEO Building One</p>
             </div>
             <div class="CEO2">
-                <img src="./ceo-2.png" alt="">
+                <img class="lore" src="./ceo-2.png" alt="">
+                <p class="class two">Surename two</p>
+                <p class="class five">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quo numquam ipsum
+                    obcaecati mollitia ut nulla fugiat libero facilis reprehenderit.</p>
+                <p class="glass eight">CEO Building two</p>
             </div>
             <div class="CEO3">
-                <img src="./ceo-3.png" alt="">
+                <img class="lore" src="./ceo-3.png" alt="">
+                <p class="class three">Surename three</p>
+                <p class="class seven">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptate repellat ipsa
+                    libero aspernatur corrupti qui aliquid vero error debitis?</p>
+                <p class=" glass ten">CEO Building Three</p>
             </div>
         </div>
     </main>
+    <footer>
+        <img src="./Avatar-03 1.png" alt="">
+        <div class="fragile">
+            <p class="Avatar-03">Zazuma'Portofolio</p>
+            <p class="main">zazuma987@gmail.com <br>+976 99545223</p>
+            <p class="headed">Ulaanbaatar Mongolia</p>
+            <button class="profil">Back Home</button>
+        </div>
+
+    </footer>
 </body>
 
 </html>
